--- a/assignment/contact.html
+++ b/assignment/contact.html
@@ -15,43 +15,40 @@
 
 <body class="appointment body_color">
     <div class="container_index">
-        <nav class="navbar navbar-expand-md" id="menu">
-            <div class="container-fluid">
-                <nav class="navbar">
-                    <div class="container-fluid">
-                        <a class="navbar-brand" href="index.html">
-                            <img src="images/logo.png" alt="" width="50" height="50" class="d-inline-block ">
-                            <p class="d-inline-block ">Medical</p>
-                        </a>
+        <nav class="navbar navbar-expand-md">
+            <div class="container-fluid d-flex justify-content-between-md">
+                <div class="">
+                    <a class="navbar-brand " href="index.html">
+                        <img src="images/logo.png" alt="" width="50" height="50" class="d-inline-block ">
+                        <p class="d-inline-block ">Medical</p>
+                    </a>
+                </div>
+                <div>
+                    <button class="navbar-toggler text-end" type="button" data-bs-toggle="collapse"
+                        data-bs-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false"
+                        aria-label="Toggle navigation">
+                        <span class="navbar-toggler-icon"></span>
+                    </button>
+                    <div class="collapse navbar-collapse " id="navbarTogglerDemo02">
+                        <ul class="navbar-nav me-auto mb-2 mb-lg-0 ">
+                            <li class="nav-item">
+                                <a class="d-flex navbar-brand justify-content-end" href="facility.html">Our Facility</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="d-flex navbar-brand justify-content-end"
+                                    href="appointment.html">Appointment</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="d-flex navbar-brand justify-content-end" href="contact.html">Contact Us</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="d-flex navbar-brand justify-content-end" href="sign_up.html"><img
+                                        src="images/icon.png" width="30" height="30"></a>
+                            </li>
+                        </ul>
                     </div>
-                </nav>
-                <nav class="navbar">
-                    <div class="container-fluid">
-                        <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
-                            data-bs-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02"
-                            aria-expanded="false" aria-label="Toggle navigation">
-                            <span class="navbar-toggler-icon"></span>
-                        </button>
-                        <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
-                            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                                <li class="nav-item">
-                                    <a class="d-flex navbar-brand" href="facility.html">Our Facility</a>
-                                </li>
-                                <li class="nav-item">
-                                    <a class="d-flex navbar-brand" href="appointment.html">Appointment</a>
-                                </li>
-                                <li class="nav-item">
-                                    <a class="d-flex navbar-brand" href="contact.html">Contact Us</a>
-                                </li>
-                                <li class="nav-item">
-                                    <a class="d-flex navbar-brand" href="sign_up.html"><img src="images/icon.png"
-                                            width="30" height="30"></a>
-                                </li>
-                            </ul>
-                        </div>
+                </div>
 
-                    </div>
-                </nav>
             </div>
         </nav>
         <h1 class="topic">Contact Us</h1>
