--- a/assignment/index.html
+++ b/assignment/index.html
@@ -16,52 +16,50 @@
 
 <body class="body_color">
     <div class="container_index">
-        <nav class="navbar navbar-expand-md" id="menu">
-            <div class="container-fluid">
-                <nav class="navbar">
-                    <div class="container-fluid">
-                        <a class="navbar-brand" href="#menu">
-                            <img src="images/logo.png" alt="" width="50" height="50" class="d-inline-block ">
-                            <p class="d-inline-block ">Medical</p>
-                        </a>
-                    </div>
-                </nav>
-                <nav class="navbar">
 
-                    <div class="container-fluid">
-                        <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
-                            data-bs-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02"
-                            aria-expanded="false" aria-label="Toggle navigation">
-                            <span class="navbar-toggler-icon"></span>
-                        </button>
-                        <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
-                            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                                <li class="nav-item">
-                                    <a class="d-flex navbar-brand" href="facility.html">Our Facility</a>
-                                </li>
-                                <li class="nav-item">
-                                    <a class="d-flex navbar-brand" href="appointment.html">Appointment</a>
-                                </li>
-                                <li class="nav-item">
-                                    <a class="d-flex navbar-brand" href="#location">location</a>
-                                </li>
-                                <li class="nav-item">
-                                    <a class="d-flex navbar-brand" href="contact.html">Contact Us</a>
-                                </li>
-                                <li class="nav-item">
-                                    <a class="d-flex navbar-brand" href="sign_up.html"><img src="images/icon.png"
-                                            width="30" height="30"></a>
-                                </li>
-                            </ul>
-                        </div>
 
+        <nav class="navbar navbar-expand-md">
+            <div class="container-fluid d-flex justify-content-between-md">
+                <div class="">
+                    <a class="navbar-brand " href="#menu">
+                        <img src="images/logo.png" alt="" width="50" height="50" class="d-inline-block ">
+                        <p class="d-inline-block ">Medical</p>
+                    </a>
+                </div>
+                <div>
+                    <button class="navbar-toggler text-end" type="button" data-bs-toggle="collapse"
+                        data-bs-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false"
+                        aria-label="Toggle navigation">
+                        <span class="navbar-toggler-icon"></span>
+                    </button>
+                    <div class="collapse navbar-collapse " id="navbarTogglerDemo02">
+                        <ul class="navbar-nav me-auto mb-2 mb-lg-0 ">
+                            <li class="nav-item">
+                                <a class="d-flex navbar-brand justify-content-end" href="facility.html">Our Facility</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="d-flex navbar-brand justify-content-end"
+                                    href="appointment.html">Appointment</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="d-flex navbar-brand justify-content-end" href="#location">location</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="d-flex navbar-brand justify-content-end" href="contact.html">Contact Us</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="d-flex navbar-brand justify-content-end" href="sign_up.html"><img
+                                        src="images/icon.png" width="30" height="30"></a>
+                            </li>
+                        </ul>
                     </div>
-                </nav>
+                </div>
+
             </div>
         </nav>
 
         <div id="home">
-            <div>
+            <div class="container">
                 <div>
                     <h1>Protecting you and your family</h1>
                 </div>
@@ -69,7 +67,7 @@
                     <h2>Your health and wellbeing is important for us.</h2>
                 </div>
             </div>
-            <div id="home_right">
+            <div id="home_right" class="container">
                 <img src="images/image_for_home.jpg">
             </div>
         </div>
@@ -84,7 +82,7 @@
                 <h2>24/7</h2>
                 <p id="padding_0">Hour</p>
                 <div>
-                    <p>Our clinics have been certified by the Board of Medicine Malaysia</p><br><br>
+                    <p id="clinic_word">Our clinics have been certified by the Board of Medicine Malaysia</p><br><br>
                     <a class="button" href="facility.html">Click for see Our Facility</a>
                 </div>
             </div>
@@ -117,7 +115,7 @@
                         </div>
                     </div>
 
-                    <a href="appointment.html" class="button">Create Appointment Now!</a>
+                    <a href="appointment.html" class="button">Appointment Now!</a>
                 </div>
                 <div class="doctors1">
                     <a href="dr_john.html"><img src="images/doctor1.png"></a>
@@ -140,7 +138,7 @@
                             </div>
                         </div>
                     </div>
-                    <a href="appointment.html" class="button">Create Appointment Now!</a>
+                    <a href="appointment.html" class="button">Appointment Now!</a>
                 </div>
                 <div class="doctors1">
                     <a href="dr_john.html"><img src="images/doctor2.png"></a>
@@ -163,7 +161,7 @@
                             </div>
                         </div>
                     </div>
-                    <a href="appointment.html" class="button">Create Appointment Now!</a>
+                    <a href="appointment.html" class="button">Appointment Now!</a>
                 </div>
             </div>
 
@@ -189,7 +187,7 @@
                             </div>
                         </div>
                     </div>
-                    <a href="appointment.html" class="button">Create Appointment Now!</a>
+                    <a href="appointment.html" class="button">Appointment Now!</a>
                 </div>
                 <div class="doctors1">
                     <a href="dr_john.html"><img src="images/doctor4.png"></a>
@@ -212,7 +210,7 @@
                             </div>
                         </div>
                     </div>
-                    <a href="appointment.html" class="button">Create Appointment Now!</a>
+                    <a href="appointment.html" class="button">Appointment Now!</a>
                 </div>
                 <div class="doctors1">
                     <a href="dr_john.html"><img src="images/doctor5.png"></a>
@@ -235,7 +233,7 @@
                             </div>
                         </div>
                     </div>
-                    <a href="appointment.html" class="button">Create Appointment Now!</a>
+                    <a href="appointment.html" class="button">Appointment Now!</a>
                 </div>
             </div>
         </div>
@@ -268,7 +266,8 @@
                             <div class="loca_phone">
                                 <div><img src="images/pin.png"></div>
                                 <div>
-                                    <p class="margin_change">Vivamus street Block C - Vestibulum Building - 3rd Floor</p>
+                                    <p class="margin_change">Vivamus street Block C - Vestibulum Building - 3rd Floor
+                                    </p>
                                 </div>
                             </div>
                         </a>
@@ -298,7 +297,8 @@
                             <div class="loca_phone">
                                 <div><img src="images/pin.png"></div>
                                 <div id="last">
-                                    <p class="margin_change">Vivamus street Block C - Vestibulum Building - 3rd Floor</p>
+                                    <p class="margin_change">Vivamus street Block C - Vestibulum Building - 3rd Floor
+                                    </p>
                                 </div>
                             </div>
                         </a>
